# blog

./: LICENSE  README.md
fractal/: mandelbrot.cpp  mandelbrot.html  mandelbrot.js
popcount/: CMakeLists.txt  Makefile  popcount.cpp
quadview/: CMakeLists.txt  image.cpp  image.h  quadview.cpp
sudoku/: CMakeLists.txt  Sudoku.cpp  Sudoku.h  SudokuSolver.cpp
